--- a/AppStore/AppStore.html
+++ b/AppStore/AppStore.html
@@ -13,7 +13,7 @@
  <body>
   <div class="head">
    <div class="logo" align="center">
-    <img src="https://evergen1.github.co"
+    <img src="https://evergen1.github.co/Apps/AppStore/Images/logo.png">
    </div>
    <div class="menu">
     
