--- a/index.html
+++ b/index.html
@@ -1,7 +1,28 @@
 <DOCTYPE! html>
 <html>
  <head>
+  <style>
+   ul#main li{
+    display:inline;
+   }
+   img{
+    max-width:100%;
+    max-height:100%;
+    min-width:10%;
+    min-height:10%;
+   }
+  </style>
  </head>
  <body>
+  <div class="head">
+   <div class="logo" align="center">
+    <img src="https://evergen1.github.io/Apps/AppStore/Images/logo.png">
+   </div>
+   <div class="menu">
+    <ul id="main">
+     <li><a href="https://evergen1.github.io/Apps/AppStore"><img></a></li>
+    </ul>
+   </div>
+  </div>
  </body>
 </html>
