--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    </div>
    <div class="menu">
     <ul id="main">
-     <li><a href="https://evergen1.github.io/Apps/AppStore"><img></a></li>
+     <li><a href="https://evergen1.github.io/Apps/AppStore"><img src="https://evergen1.github.io/Apps/AppStore/Images/icon.png"></a></li>
     </ul>
    </div>
   </div>
