--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
    </div>
    <div class="menu">
     <ul id="main">
-     <li><a href="https://evergen1.github.io/Apps/AppStore"><img src="https://evergen1.github.io/Apps/AppStore/Images/icon.png"></a></li>
+     <li><a href="https://evergen1.github.io/apk/AppStore.apk" download><img src="https://evergen1.github.io/Apps/AppStore/Images/icon.png"></a></li>
+     <li><a href="https://evergen1.github.io/apk/BrowserQuest.apk" download><img src="https://evergen1.githubio/Apps/BrowserQuest/Images/icon.png"></a></li>
     </ul>
    </div>
   </div>
