--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <div class="menu">
     <ul id="main">
      <li><a href="https://evergen1.github.io/apk/AppStore.apk" download><img src="https://evergen1.github.io/Apps/AppStore/Images/icon.png"></a></li>
-     <li><a href="https://evergen1.github.io/apk/BrowserQuest.apk" download><img src="https://evergen1.githubio/Apps/BrowserQuest/Images/icon.png"></a></li>
+     <li><a href="https://evergen1.github.io/apk/BrowserQuest.apk" download><img src="https://evergen1.github.io/Apps/BrowserQuest/Images/icon.png"></a></li>
     </ul>
    </div>
   </div>
