--- a/AppStore/index.html
+++ b/AppStore/index.html
@@ -8,6 +8,12 @@
    div.divBody{
     background:aqua;
    }
+   img{
+    max-width:100%;
+    max-height:100%;
+    min-width:1%;
+    min-height:1%;
+   }
   </style>
  </head>
  <body>
