--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE! html>
 <html>
  <head>
-  <meta name="google-site-verification" content="aY6FWW0SZuDNfZp1y5Y-_DktjcRjVy-Y-PF2euEQBeI" />
+  <meta name="google-site-verification" content="aY6FWW0SZuDNfZp1y5Y-_DktjcRjVy-Y-PF2euEQBeI">
   <style>
    ul#main li{
     display:inline;
