--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
  <head>
   <meta name="google-site-verification" content="aY6FWW0SZuDNfZp1y5Y-_DktjcRjVy-Y-PF2euEQBeI">
+  <title>EverGenCo</title>
   <style>
    ul#main li{
     display:inline;
